--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
+        }
+        #gameWrapper {
+            display: none;
+            position: relative;
+            width: 100vw;
+            height: 100vh;
         }
         #menu {
             background: white;
