Update header text to include TMAchat

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div class="menu-container">
-        <h1>🎮 TMAGames</h1>
+        <h1>TMAgames, now with TMAchat</h1>
         <p>Welcome! Choose a game to play with friends online</p>
         
         <div class="games-grid">
