--- a/public/index.html
+++ b/public/index.html
@@ -71,12 +71,12 @@
         <div class="games-grid">
             <a href="/flappy.html" class="game-card">
                 <h2>🐦 Flappy Bird</h2>
-                <p>Multiplayer madness!</p>
+                <p>Multiplayer chaos!</p>
             </a>
             
-            <a href="/new-game.html" class="game-card">
-                <h2>🎲 New Game</h2>
-                <p>Coming soon...</p>
+            <a href="/gartic.html" class="game-card">
+                <h2>🎨 Gartic Phone</h2>
+                <p>Draw & guess with friends!</p>
             </a>
             
             <div class="game-card" style="opacity: 0.5; cursor: not-allowed;">
