--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,13 @@
                 <p>Draw & guess with friends!</p>
             </a>
             
-            <div class="game-card" style="opacity: 0.5; cursor: not-allowed;">
-                <h2>🎯 Game 3</h2>
-                <p>Coming soon...</p>
-            </div>
+            <a href="/chatapp.html" class="game-card" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%);">
+                <h2>💬 TMAChat</h2>
+                <p>Full messaging app!</p>
+            </a>
             
             <div class="game-card" style="opacity: 0.5; cursor: not-allowed;">
-                <h2>⚔️ Game 4</h2>
+                <h2>🎮 Game 4</h2>
                 <p>Coming soon...</p>
             </div>
         </div>
