--- a/public/chatapp.html
+++ b/public/chatapp.html
@@ -12,7 +12,7 @@
         }
         html, body {
             height: 100%;
-            overflow: hidden; /* Prevent any page-level scroll */
+            overflow: hidden; /* Lock page scroll forever */
         }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -66,11 +66,13 @@
             border-right: 1px solid #2a3f5f;
             display: flex;
             flex-direction: column;
+            height: 100%;
         }
         .sidebar-header {
             padding: 20px;
             background: #0f3460;
             border-bottom: 1px solid #2a3f5f;
+            flex-shrink: 0;
         }
         .sidebar-header h2 {
             color: #fff;
@@ -80,6 +82,7 @@
             display: flex;
             padding: 10px;
             gap: 10px;
+            flex-shrink: 0;
         }
         .tab-btn {
             flex: 1;
@@ -132,6 +135,7 @@
             display: flex;
             flex-direction: column;
             background: #0f3460;
+            height: 100%;
         }
         .chat-header {
             padding: 20px;
@@ -140,7 +144,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            flex-shrink: 0; /* Prevent header from shrinking */
+            flex-shrink: 0;
         }
         .chat-header h3 {
             font-size: 20px;
@@ -162,6 +166,7 @@
             flex-direction: column;
             gap: 15px;
             background: #0f3460;
+            -webkit-overflow-scrolling: touch; /* Smooth on mobile */
         }
         .message {
             max-width: 70%;
@@ -234,7 +239,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            flex-shrink: 0; /* Prevent input from shrinking */
+            flex-shrink: 0;
         }
         .input-area input[type="text"] {
             flex: 1;
